# LLm_from_Scratch

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_decode.py  test_pipeline.py  test_tiktoken.py  text.py
api/: main.py
api/templates/: index.html
config/: model.yml
exception/: __init__.py
notebooks/: Attention.ipynb  Causal_Attention.ipynb  Coding_GPT_2.ipynb  HuggingFace.ipynb  LLM_Pretraining.ipynb  Positional_Encoding.ipynb  Vector_embedding.ipynb  data_emoji.ipynb  data_emoji.txt  pushing_to_hugging_face.ipynb  tokenizer.ipynb
src/components/: DataIngestionComponent.py  DataTransformationComponent.py  ModelPredictionComponent.py  ModelTrainingComponent.py
src/constants/: __init__.py
src/data_access/: download_gpt_weights.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py
src/models/: GPTModel.py  Layers.py  MultiHeadAttention.py  TransformerBlock.py
src/pipelines/: DataIngestionPipeline.py  DataTransformationPipeline.py  ModelPredictionPipeline.py  ModelTrainingPipeline.py
src/tests/: estimator_test.py  pipeline_test.py  prediction_test.py
utils/: main_utils.py
