[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "pyyaml>=6.0.3",
    "tensorflow>=2.21.0",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
]
